# predict-backtest

./: .dockerignore  .gitignore  .pylintrc  README.md  pyproject.toml  setup.cfg
docs/: kelly-criteria.txt
experiments/: count_classes.txt
notebooks/: calculate_classes.ipynb  classes_calc.py  multiple_classes.ipynb  proportions_calc.py  signals_calc.py  single_class.ipynb
notebooks/models/: 2023-12-11-DNA-from20210101-to20231111-in16-hid12-predictdown7pct-result9361pct.pth  2023-12-11-DNA-from20210101-to20231111-in16-hid12-predictup12pct-accu9678pct.pth  2023-12-11-DNA-from20210101-to20231111-in16-hid12-result9361pct.pth  2023-12-15-SHOP-from20200101-to20231111-in16-hid12-predictdown7pct-accu9732pct.pth  2023-12-15-SHOP-from20200101-to20231111-in16-hid12-predictup12pct-accu9623pct.pth  2023-12-15-SHOP-from20200101-to20231111-in16-hid12-predictup7pct-accu9617pct.pth  2023-12-17-DNA-from20200101-to20231111-in16-hid12-predictdown2pct-accu9644pct.pth
notebooks/modules/: validation_utils.py
src/: main.py  preprocessing.py  pytest.ini  settings.py
src/apis/: tiingo_api.py
src/classificators/: data_gen.py  list_utils.py  percent_classificator.py  proportions_calc.py  series_classificator.py  validation_utils.py
src/classifiers/: base_classifier.py  ewa_classifier.py  up_down_classifier.py
src/data_sources/: base_repo.py  data_loader.py  data_transformer.py  tiingo_repo.py
src/modules/: classes_calc.py  data_gen.py  diff_utils.py  generate_intervals.py  signals_calc.py
src/playground/: plot_averages.py  swirl_predictor.py
src/tests/: conftest.py  context.py  (+7 more)
(+36 files in other folders)
